<resources>
    <string name="app_name">FlavorFinder</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signIn">Sign in</string>
    <string name="register">Register</string>
    <string name="newHere">New here? Register here!</string>
    <string name="haveAccount">Have an account? Sign in here!</string>
    <string name="forgotPassword_email">Enter your email</string>
    <string name="password_reset">Reset your password</string>
    <string name="resetPassword">Please enter your email address. You will receive an email message with instruction on how to reset your password</string>

    <!-- Content Description text -->
    <string name="SignInImage">Gambar pada page Sign in page</string>
    <string name="RegisterImage">Gambar pada page Register page</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="userProfile">user profile</string>
    <string name="example_receipt_title">Ikan Goreng Tepung</string>

    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
    <string name="ingredients">Ingredients:</string>
    <string name="instruction">Instruction:</string>
    <string name="bookmark">Bookmark</string>
    <string name="watch_here">Watch here</string>
    <string name="name">Name</string>
    <string name="username_or_email">Username or Email</string>
    <string name="no_items_bookmarked">No items bookmarked</string>
    <string name="search">Search...</string>
    <string name="greeting">Hi, User! Do you have something to cook?</string>
    <string name="confirm_logout">Confirm Logout</string>
    <string name="text_confirm_logout">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="session_expired">Session expired</string>
    <string name="message_dialog">Oops, your session has ended.\nYou need to log back in.</string>
    <string name="edit_username">Edit Username</string>
    <string name="insert_a_new_username">Insert a new username</string>
    <string name="new_username">New username</string>
    <string name="save">Save</string>
    <string name="image_preview">Image preview</string>
    <string name="see_all_reviews">See all reviews</string>
    <string name="comments">Comments</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="message_confirm_delete_comment">Are your sure you want to delete this comment?</string>
    <string name="delete">Delete</string>
    <string name="login_failed">Login Failed</string>
    <string name="message_login_failed">Login failed! invalid email/username \nor password.</string>
    <string name="go_back">Go back</string>
    <string name="search_here">Search here...</string>
</resources>