<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_titile_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_logout"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_confirm_logout"
            android:textSize="16sp"
            android:layout_marginVertical="8dp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@id/tv_titile_dialog"
            app:layout_constraintTop_toBottomOf="@id/tv_titile_dialog"
            app:layout_constraintEnd_toEndOf="@id/tv_titile_dialog"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginVertical="8dp"
            style="@style/Widget.Material3.Button.OutlinedButton"
            app:layout_constraintStart_toStartOf="@id/tv_message"
            app:layout_constraintTop_toBottomOf="@id/tv_message"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_confirm"
            app:layout_constraintHorizontal_bias="0.5" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/btn_cancel"
            app:layout_constraintTop_toBottomOf="@id/tv_message"
            app:layout_constraintEnd_toEndOf="@id/tv_message"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>