<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/session_expired"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/session_expired"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_message_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_dialog"
            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_marginVertical="10dp"
            app:layout_constraintStart_toStartOf="@id/session_expired"
            app:layout_constraintTop_toBottomOf="@id/session_expired"
            app:layout_constraintEnd_toEndOf="@id/session_expired"/>

        <Button
            android:id="@+id/btn_dialog_session_expired"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@id/tv_message_dialog"
            app:layout_constraintTop_toBottomOf="@id/tv_message_dialog"
            app:layout_constraintEnd_toEndOf="@id/tv_message_dialog"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>