<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/edit_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_profile_picture"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/image_preview"
            android:textSize="16sp"
            android:layout_marginVertical="8dp"
            android:paddingStart="4dp"
            app:layout_constraintStart_toStartOf="@id/edit_username"
            app:layout_constraintTop_toBottomOf="@id/edit_username"
            app:layout_constraintEnd_toEndOf="@id/edit_username"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="180dp"
            android:layout_height="180dp"
            tools:src="@tools:sample/avatars"
            android:scaleType="centerCrop"
            android:layout_marginVertical="8dp"
            app:layout_constraintStart_toStartOf="@id/tv_message"
            app:layout_constraintTop_toBottomOf="@id/tv_message"
            app:layout_constraintEnd_toEndOf="@id/tv_message"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginTop="8dp"
            style="@style/Widget.Material3.Button.OutlinedButton"
            app:layout_constraintStart_toStartOf="@id/iv_profile"
            app:layout_constraintTop_toBottomOf="@id/iv_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_save"/>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginTop="8dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@id/btn_cancel"
            app:layout_constraintTop_toBottomOf="@id/iv_profile"
            app:layout_constraintEnd_toEndOf="@id/iv_profile"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>